# ClassicMceliece

./: .gitignore  CALL_GRAPH_ANALYSIS_README.md  CMakeLists.txt  ClassicMceliece.code-workspace  INTEGRATION_TEST_SUMMARY.md  KAT call graph (Markdown).md  Makefile.benchmark  Makefile.direct_comparison  Makefile.full_kat  Makefile.pk_test  Makefile.reference_test  Makefile.simple  NUMERICAL_COMPARISON_GUIDE.md  README.md  Reference KAT call graph (PQClean-style).md  bench_dbg.out  bench_normal  call_graph_benchmark  call_graph_benchmark.c  cg_iter_1_call_graph_timing.csv  compare_early_steps.c  compare_exact_reference.c  compare_steps_1_5  compare_steps_1_5.c  compile_test_with_reference.md  comprehensive_test.sh  controlbits.c  controlbits.h  dataflow_trace  dataflow_trace.c  debug_detailed  debug_gauss  debug_gaussian.c  debug_gaussian_detailed.c  debug_genpoly  debug_genpoly.c  debug_matrix_packing.c  debug_matrix_vs_reference.c  debug_packing  debuglog.h  (+84 more)
build-release/: CMakeCache.txt  ClassicMceliece  Makefile  cmake_install.cmake
call_graph_benchmark.dSYM/Contents/: Info.plist
call_graph_benchmark.dSYM/Contents/Resources/DWARF/: call_graph_benchmark
dataflow_trace.dSYM/Contents/: Info.plist
dataflow_trace.dSYM/Contents/Resources/DWARF/: dataflow_trace
full_kat_test.dSYM/Contents/: Info.plist
full_kat_test.dSYM/Contents/Resources/DWARF/: full_kat_test
mceliece.dSYM/Contents/: Info.plist
mceliece.dSYM/Contents/Resources/DWARF/: mceliece
mceliece6688128/: Makefile  SimpleFIPS202.h  benes.c  build  controlbits.c  crypto_hash.h  gf.c  kat  kat_kem.int  kat_kem.req  namespace_define.h  operations_with_counter.c  pk_gen.c  root.c  sk_gen.c  test_single_keygen.c  transpose.c  util.c
mceliece6688128/libkeccak.a.headers/: SimpleFIPS202.h
mceliece6688128/nist/: rng.c
mceliece6688128f/: build  crypto_hash.h  kat  pk_gen.c
run_kat.dSYM/Contents/: Info.plist
run_kat.dSYM/Contents/Resources/DWARF/: run_kat
src/: controlbits.c  controlbits.h  debuglog.h  hierarchical_profiler.h  kat_drbg.c  kat_drbg.h  mceliece_decode.c  mceliece_encode.c  mceliece_genpoly.c  mceliece_genpoly.h  mceliece_gf.c  mceliece_kem.c  mceliece_kem_complete.h  mceliece_keygen.c  mceliece_keygen.h  mceliece_matrix_ops.c  mceliece_poly.c  mceliece_shake.c  rng.c
src_semi/: mceliece_keygen_semi.c  mceliece_keygen_semi.h
tests/: bench_normal.c  gf_compare_bad.c
tests/kat/: run_kat.c
tools/call_runtime/: call_graph_benchmark.c  function_profiler.c  function_profiler.h  hierarchical_profiler.c  hierarchical_profiler.h
